--- a/apps/web/templates/shared/_nav.html.haml
+++ b/apps/web/templates/shared/_nav.html.haml
@@ -7,8 +7,9 @@
       =link_to 'Properties', routes.properties_path, class: 'navbar-item'
       =link_to 'Features', routes.features_path, class: 'navbar-item'
     .navbar-end
-      .navbar-item.is-uppercase.has-text-weight-semibold
-        =current_user.first_name
-      .navbar-item
-        =render partial: 'shared/sign_out'
+      - if current_user
+        .navbar-item.is-uppercase.has-text-weight-semibold
+          =current_user.first_name
+        .navbar-item
+          =render partial: 'shared/sign_out'
 
