--- a/apps/web/templates/shared/_nav.html.haml
+++ b/apps/web/templates/shared/_nav.html.haml
@@ -2,7 +2,7 @@
   .container
     .navbar-brand
       .title
-        =link_to 'Property Finder', routes.root_path, class: 'navbar-item'
+        =link_to 'PropiFind', routes.root_path, class: 'navbar-item'
     .navbar-start
       =link_to 'Properties', routes.properties_path, class: 'navbar-item'
       .navbar-item.has-dropdown.is-hoverable
