--- a/apps/web/templates/application.html.erb
+++ b/apps/web/templates/application.html.erb
@@ -2,10 +2,8 @@
 <html>
   <head>
     <title>Web</title>
-    <%= javascript 'javascripts/application', type: 'text/javascript' %>
-    <%= javascript 'https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js' %>
-    <%= stylesheet 'bulma' %>
-    <%= favicon %>
+    <script src="<%= webpack_asset_path('application') %>"></script>
+    <script src="<%= webpack_asset_path('styles') %>"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
