Basic CSS serving

--- a/apps/web/templates/application.html.erb
+++ b/apps/web/templates/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>Web</title>
     <script src="<%= webpack_asset_path('application') %>"></script>
-    <script src="<%= webpack_asset_path('styles') %>"></script>
+    <link rel="stylesheet" type="text/css" href="http://localhost:3020/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
