basic implementation of the property rating graph

--- a/apps/web/templates/application.html.erb
+++ b/apps/web/templates/application.html.erb
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Web</title>
-    <%= javascript 'javascripts/application', type: 'text/javascript' %>
     <%= javascript 'https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js' %>
+    <%= javascript 'Chart.bundle.min' %>
     <%= stylesheet 'bulma' %>
     <%= favicon %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
