--- a/apps/web/templates/properties/show.html.haml
+++ b/apps/web/templates/properties/show.html.haml
@@ -25,9 +25,8 @@
   .tile.is-parent
     .tile.is-child.box
       %canvas{ id: 'property-ratings', width: '900', height: '300' }
-      Graph goes here
 
 =render partial: 'ratings/form_modal'
 
 =javascript 'rating', type: 'text/javascript'
-=javascript 'rating_data', type: 'text/javascript'
+=javascript 'property_rating_graphs', type: 'text/javascript'
