added land and house size to property. Added calculation of max spend and stamp duty

--- a/apps/web/templates/properties/edit.html.haml
+++ b/apps/web/templates/properties/edit.html.haml
@@ -28,6 +28,14 @@
           - label 'Available?', class: 'checkbox'
           - check_box :available
 
+        - div class: 'field' do
+          - label 'Land Size (m2)', class: 'label'
+          - number_field :land_size, class: 'input'
+
+        - div class: 'field' do
+          - label 'House Size (m2)', class: 'label'
+          - number_field :house_size, class: 'input'
+
         -div class: 'field' do
           - fields_for :property_features do
             - features.each do |feature|
