--- a/apps/web/templates/shared/_nav.html.haml
+++ b/apps/web/templates/shared/_nav.html.haml
@@ -5,6 +5,7 @@
         =link_to 'PropiFind', routes.root_path, class: 'navbar-item'
     .navbar-start
       =link_to 'Properties', routes.properties_path, class: 'navbar-item'
+      =link_to 'Finance', routes.financial_data_path, class: 'navbar-item'
       .navbar-item.has-dropdown.is-hoverable
         %a.navbar-link= 'Configuration'
         .navbar-dropdown
